<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>java-pre-jpms</artifactId>
   <name>java-pre-jpms</name>
   <packaging>jar</packaging>

   <parent>
      <groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
      <artifactId>java-core-modules</artifactId>
      <version>1.0.0</version>
   </parent>

   <dependencies>
      <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>2.4.0-b180725.0427</version>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${org.slf4j.version}</version>
      </dependency>
   </dependencies>

   <build>
      <finalName>java-pre-jpms</finalName>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${compiler.plugin.version}</version>
            <configuration>
               <source>17</source>
               <target>17</target>
               <compilerArgs>
                  <arg>--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED</arg>
               </compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>${dependency.plugin.version}</version>
            <executions>
               <execution>
                  <id>copy-dependencies</id>
                  <phase>package</phase>
                  <goals>
                     <goal>copy-dependencies</goal>
                  </goals>
                  <configuration>
                     <outputDirectory>
                        ${project.build.directory}/dependency-jars/
                     </outputDirectory>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <configuration>
               <archive>
                  <manifest>
                     <mainClass>cn.tuyucheng.taketoday.prejpms.App</mainClass>
                     <addClasspath>true</addClasspath>
                     <classpathPrefix>dependency-jars/</classpathPrefix>
                  </manifest>
               </archive>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <properties>
      <dependency.plugin.version>3.1.1</dependency.plugin.version>
      <compiler.plugin.version>3.8.0</compiler.plugin.version>
   </properties>
</project>